objects/SFGA__Ad_Group__c.object
<CustomObject>
    <description>A Google Ad Group is a collection of Text Ads and Keywords</description>
    <fields>
        <fullName>SFGA__Ad_Group_ID__c</fullName>
        <description>Unique Identifier of the Ad Group</description>
        <label>Ad Group ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001HggvEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001HggwEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ad Group</label>
    <nameField>
        <label>Ad Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>